# exemplo-projeto-django

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: lint.yml
project/: settings.py  urls.py
scripts/: configure-env.sh
